--- a/history-sync/src/app/app.component.html
+++ b/history-sync/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-menu></app-menu>
-
+<app-header></app-header>
+<main class="container">
+  <!-- Conteúdo principal da aplicação -->
+</main>
 <app-footer></app-footer>
