--- a/history-sync/src/app/footer/footer.component.html
+++ b/history-sync/src/app/footer/footer.component.html
@@ -13,3 +13,8 @@
     © 2024 HistorySync
   </div>
 </footer>
+
+
+<!-- <footer>
+  <p>&copy; 2024 Desenvolvido por João Abner Almeida.</p>
+</footer> -->
