--- a/history-sync/src/app/app.component.html
+++ b/history-sync/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
 <main class="container">
+  <router-outlet></router-outlet>
   <!-- Two-Way Data Binding -->
   <input [(ngModel)]="name" placeholder="Enter your name">
   <p>Your name is: {{ name }}</p>
 </main>
-<app-binding-showcase></app-binding-showcase>
+
 <app-footer></app-footer>
