--- a/history-sync/src/app/header/header.component.html
+++ b/history-sync/src/app/header/header.component.html
@@ -9,13 +9,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" routerLink="/menu">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobre</a>
+            <a class="nav-link" routerLink="/sobre">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contato</a>
+            <a class="nav-link" routerLink="contato">Contato</a>
           </li>
         </ul>
       </div>
