--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -1,7 +1,2 @@
-<nav>
-  <ul>
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
-  </ul>
-</nav>
+<p>menu works!!</p>
+<app-binding-showcase></app-binding-showcase>
