--- a/history-sync/src/app/header/header.component.html
+++ b/history-sync/src/app/header/header.component.html
@@ -12,10 +12,10 @@
             <a class="nav-link active" routerLink="/menu">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/sobre">Sobre</a>
+            <a class="nav-link" routerLink="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="contato">Contato</a>
+            <a class="nav-link" routerLink="contact">Contact</a>
           </li>
         </ul>
       </div>
