--- a/history-sync/src/app/app.component.html
+++ b/history-sync/src/app/app.component.html
@@ -4,6 +4,10 @@
   <!-- Two-Way Data Binding -->
   <input [(ngModel)]="name" placeholder="Enter your name">
   <p>Your name is: {{ name }}</p>
+
+  <!-- Passando dados via @Input e @Output -->
+  <app-child [parentData]="parentData" (childEvent)="receiveData($event)"></app-child>
+  <p>Data received from child: {{ childData }}</p>
 </main>
 
 <app-footer></app-footer>
