--- a/history-sync/src/app/menu/menu.component.css
+++ b/history-sync/src/app/menu/menu.component.css
@@ -35,3 +35,63 @@ nav ul li a:hover {
   background-color: #555;
   color: #fff;
 }
+
+/* Estilo para o contêiner do formulário */
+div {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 7rem;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  background-color: #f9f9f9;
+}
+
+/* Estilo para os títulos */
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+/* Estilo para os rótulos */
+label {
+  margin-bottom: .5em;
+  color: #333;
+  display: block;
+}
+
+/* Estilo para os campos de entrada */
+input {
+  border: 1px solid #ccc;
+  padding: .5em;
+  font-size: 1em;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: .25em;
+  margin-bottom: 1em;
+}
+
+/* Estilo para o botão */
+button {
+  padding: 0.7em;
+  color: #fff;
+  background-color: #007BFF;
+  border: none;
+  border-radius: .25em;
+  cursor: pointer;
+  font-size: 1em;
+  width: 100%;
+}
+
+/* Estilo para o botão quando desabilitado */
+button:disabled {
+  background-color: #cccccc;
+}
+
+/* Estilo para mensagens de confirmação */
+p {
+  color: green;
+  font-size: 1em;
+  margin-top: 1em;
+  text-align: center;
+}
