--- a/history-sync/src/app/app.component.css
+++ b/history-sync/src/app/app.component.css
@@ -1,11 +1,18 @@
 /* Define o layout do AppComponent para ocupar toda a altura da viewport */
-:host {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* O main ocupa o espaço disponível */
-main {
-  flex: 1 0 auto;
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-image: url("https://res.cloudinary.com/daqpjdyeu/image/upload/v1719009366/HistorySync/business-background_d8h7h3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-size: 1rem;
+  /* Tamanho padrão da fonte */
 }
