Refactor header and menu components: replace menu button with app-menu component and simplify menu styles

--- a/history-sync/src/app/header/header.component.html
+++ b/history-sync/src/app/header/header.component.html
@@ -1,9 +1,7 @@
 <header>
   <nav class="navbar">
     <div class="navbar-container">
-      <button class="menu-button">
-        <i class="bi bi-list fs-2"></i>
-      </button>
+      <app-menu></app-menu>
     </div>
     <div class="title-container">
       <span class="history-sync-tittle">HistorySync</span>
