--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -1,7 +1,17 @@
-<nav>
-  <ul>
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
-  </ul>
-</nav>
+<!-- menu lateral esquerdo -->
+<div class="menu-lateral-esquerdo">
+  <div class="menu-principal">
+    <!-- Navegação -->
+    <nav class="navegacao">
+      <ul id="ul-navegacao">
+        <li><button type="button" class="btn new-event-button"><i class="bi bi-plus-square-fill"></i>
+            Novo
+            Evento</button></li>
+        <li>
+          <button type="button" class="btn search-events" id="search-events">
+            <i class="bi bi-search"></i> Buscar Evento
+          </button>
+        </li>
+      </ul>
+    </nav>
+  </div>
