Add logo to menu component and enhance styles; update package.json for Bootstrap types

--- a/history-sync/src/app/menu/menu.component.css
+++ b/history-sync/src/app/menu/menu.component.css
@@ -26,3 +26,43 @@
   display: flex;
   align-items: center;
 }
+
+/* Botões */
+.new-event-button,
+.search-events,
+.menu-all-button,
+.save-button,
+.delete-btn {
+  color: var(--klistapp-mine-shaft);
+  background-color: transparent;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.new-event-button i,
+.search-events i,
+.menu-all-button i {
+  color: inherit;
+}
+
+.new-event-button:hover,
+.search-events:hover,
+.menu-all-button:hover,
+.save-button:hover,
+.delete-btn:hover {
+  color: var(--klistapp-nero);
+  background-color: var(--klistapp-bay-of-many);
+}
+
+.logo-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 0.625rem;
+}
+
+.logo-container img {
+  max-width: 100%;
+  height: auto;
+}
