--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -15,3 +15,9 @@
       </ul>
     </nav>
   </div>
+  <!-- Logo do Projeto -->
+  <div class="logo-container">
+    <img src="https://res.cloudinary.com/daqpjdyeu/image/upload/v1718848182/HistorySync/logo-historySync_il8vzc.png"
+      alt="Logo HistorySync">
+  </div>
+</div>
