Add new event and search event pages; update routing and styles

--- a/history-sync/src/app/header/header.component.html
+++ b/history-sync/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar">
     <div class="navbar-container">
-      <button class="menu-button">
+      <button class="menu-button" (click)="toggleMenu()">
         <i class="bi bi-list fs-2"></i>
       </button>
     </div>
