--- a/history-sync/src/app/header/header.component.html
+++ b/history-sync/src/app/header/header.component.html
@@ -9,5 +9,6 @@
       <span class="history-sync-tittle">HistorySync</span>
     </div>
   </nav>
+  <!-- menu lateral esquerdo -->
   <app-menu></app-menu>
 </header>
