--- a/history-sync/src/app/menu/menu.component.css
+++ b/history-sync/src/app/menu/menu.component.css
@@ -1,12 +1,12 @@
 .menu-lateral-esquerdo {
-  font-size: 14px;
   width: 16%;
   /* Ocupa toda a largura de 16% da tela */
   height: 100vh;
   /* Altura total da viewport */
-  position: relative;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
   background-color: var(--klistapp-wild-sand);
-  z-index: 999;
   transform: translateX(0);
   transition: transform 0.3s ease-in-out;
 }
@@ -18,7 +18,7 @@
 
 .navegacao ul {
   list-style-type: none;
-  padding: 20px;
+  padding: 1.25rem;
 }
 
 .navegacao li {
@@ -36,6 +36,7 @@
   color: var(--klistapp-mine-shaft);
   background-color: transparent;
   transition: background-color 0.3s ease-in-out;
+  font-size: 1.45rem;
 }
 
 .new-event-button i,
