--- a/history-sync/src/app/app.component.html
+++ b/history-sync/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
 <div class="main-content">
-  <router-outlet></router-outlet>
+  <app-menu></app-menu>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
