--- a/history-sync/src/app/new-event-page/new-event-page.component.css
+++ b/history-sync/src/app/new-event-page/new-event-page.component.css
@@ -3,7 +3,8 @@
 /* Container principal */
 .container {
   max-width: 37.5rem;
-  margin-left: 28rem;
+  /* margin-left: 28rem; */
+  margin: 0 auto;
   padding: 1.25rem;
   background-color: #f9f9f9;
   border-radius: 0.5rem;
@@ -13,6 +14,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  z-index: 995;
   /* Garante que o contêiner ocupe a altura total da viewport */
 }
 
