--- a/history-sync/src/app/menu/menu.component.css
+++ b/history-sync/src/app/menu/menu.component.css
@@ -1,5 +1,5 @@
 .menu-lateral-esquerdo {
-  width: 16%;
+  width: 15.625rem;
   /* Ocupa toda a largura de 16% da tela */
   height: 100vh;
   /* Altura total da viewport */
@@ -12,7 +12,7 @@
 }
 
 .menu-lateral-esquerdo.oculto {
-  transform: translateX(-170%);
+  transform: translateX(-100%);
   /* Move o menu lateral para fora da tela */
 }
 
