--- a/history-sync/src/main.css
+++ b/history-sync/src/main.css
@@ -33,8 +33,8 @@ app-menu {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  /* Garante que o conteúdo ocupe a altura total da viewport */
+  min-height: calc(100vh - 5rem);
+  /* Altura total da viewport menos a altura do cabeçalho */
 }
 
 /* Para telas com largura mínima de 900px */
@@ -64,12 +64,12 @@ app-menu {
 @media screen and (max-width: 768px) {
 
   app-menu {
-    width: 200px;
+    width: 12.5rem;
     /* Ajusta a largura do menu lateral para telas menores */
   }
 
   .content {
-    margin-left: 200px;
+    margin-left: 12.5rem;
     /* Ajusta o espaço para o menu lateral em telas menores */
   }
 
@@ -89,6 +89,7 @@ app-menu {
     /* Define a largura do menu lateral esquerdo */
     height: 100vh;
     /* Define a altura total da viewport */
+    font-size: 0.875rem;
   }
 }
 
@@ -106,6 +107,12 @@ app-menu {
     /* Reduz a largura do menu lateral esquerdo */
     height: 100vh;
     /* Mantém a altura total da viewport */
+    font-size: 1rem;
+  }
+
+  .content {
+    margin-left: 45%;
+    /* Ajusta o espaço para o menu lateral em telas menores */
   }
 
   #historicalEvents {
@@ -126,5 +133,18 @@ app-menu {
   .navbar {
     justify-content: space-around;
     /* Distribui os itens da barra de navegação com espaço igual em todos os lados */
+  }
+
+  .menu-lateral-esquerdo {
+    width: 15.625rem;
+    /* Define a largura do menu lateral esquerdo */
+    height: 100vh;
+    /* Define a altura total da viewport */
+    font-size: 1rem;
+  }
+
+  .content {
+    margin-left: 15.625rem;
+    /* Ajusta o espaço para o menu lateral em telas menores */
   }
 }
