Update styles: add background image to body, change new event page background color, and clean up app component styles

--- a/history-sync/src/app/new-event-page/new-event-page.component.css
+++ b/history-sync/src/app/new-event-page/new-event-page.component.css
@@ -6,7 +6,7 @@
   /* margin-left: 28rem; */
   margin: 0 auto;
   padding: 1.25rem;
-  background-color: #f9f9f9;
+  background-color: var(--klistapp-nero);
   border-radius: 0.5rem;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
   display: flex;
