--- a/history-sync/src/main.css
+++ b/history-sync/src/main.css
@@ -2,6 +2,20 @@
 
 /* Estilos globais para o layout do aplicativo */
 
+/* Adiciona a imagem de fundo ao body */
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-image: url("https://res.cloudinary.com/daqpjdyeu/image/upload/v1719009366/HistorySync/business-background_d8h7h3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+}
+
+
 /* Estilos para o contêiner principal */
 .main-content {
   display: flex;
