Update menu styles: adjust height for better layout and improve content margin for responsiveness

--- a/history-sync/src/app/menu/menu.component.css
+++ b/history-sync/src/app/menu/menu.component.css
@@ -1,8 +1,6 @@
 .menu-lateral-esquerdo {
   width: 15.625rem;
-  /* Ocupa toda a largura de 16% da tela */
-  height: 100vh;
-  /* Altura total da viewport */
+  height: 95%;
   position: fixed;
   display: flex;
   flex-direction: column;
