--- a/history-sync/src/app/my-historical-events-page/my-historical-events-page.component.html
+++ b/history-sync/src/app/my-historical-events-page/my-historical-events-page.component.html
@@ -1,1 +1,4 @@
-<p>my-historical-events-page works!</p>
+<div class="container">
+  <h2>My Historical Events</h2>
+  <div id="my-historicalEvents"></div>
+</div>
