--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -14,6 +14,16 @@
             <i class="bi bi-search"></i> Search Event
           </button>
         </li>
+        <li>
+          <button type="button" class="btn my-historical-events" (click)="openMyHistoricalEventsPage()">
+            <i class="bi bi-calendar-event"></i> My Historical Events
+          </button>
+        </li>
+        <li>
+          <button type="button" class="btn api-historical-events" (click)="openApiHistoricalEventsPage()">
+            <i class="bi bi-globe"></i> API Historical Events
+          </button>
+        </li>
       </ul>
     </nav>
   </div>
