--- a/history-sync/src/app/my-historical-events-page/my-historical-events-page.component.css
+++ b/history-sync/src/app/my-historical-events-page/my-historical-events-page.component.css
@@ -7,7 +7,7 @@
   overflow-y: auto;
   margin-top: 2.5rem;
   position: absolute;
-  top: 32%;
+  top: 30%;
   left: 55%;
   transform: translate(-50%, -50%);
   width: 50%;
@@ -28,9 +28,46 @@ h2 {
 }
 
 /* Estilos para o conteúdo */
-.content {
+#my-historicalEvents {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+/* Estilos para cada item de evento */
+.event-item {
+  background-color: #f9f9f9;
+  border-radius: 0.3125rem;
+  padding: 0.625rem;
+  margin-bottom: 0.625rem;
+}
+
+h3.event-title {
+  font-weight: bold;
+  color: var(--klistapp-mine-shaft);
+}
+
+.event-description {
+  color: var(--klistapp-mine-shaft);
+}
+
+/* .event-year,
+.event-description {
+  margin: 0.25rem 0;
+} */
+
+/* Estilos para o botão de deletar */
+/* .delete-btn {
+  background-color: #ff4d4d;
+  color: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-btn:hover {
+  background-color: #ff1a1a;
+} */
