--- a/history-sync/src/app/my-historical-events-page/my-historical-events-page.component.html
+++ b/history-sync/src/app/my-historical-events-page/my-historical-events-page.component.html
@@ -1,4 +1,13 @@
 <div class="container">
   <h2>My Historical Events</h2>
-  <div id="my-historicalEvents"></div>
+  <div id="my-historicalEvents">
+    <!-- Conteúdo da página My Historical Events -->
+    <h1>Eventos Históricos Adicionados</h1>
+    <div *ngFor="let event of events" class="event-item">
+      <h3 class="event-title">Título: {{ event.eventoFormDados.titulo }}</h3>
+      <p class="event-year">Ano do Evento: {{ event.eventoFormDados.anoInput }}</p>
+      <p class="event-description">Descrição: {{ event.eventoFormDados.descricao }}</p>
+      <button class="delete-btn" (click)="deleteEvent(event.id)">Deletar</button>
+    </div>
+  </div>
 </div>
