--- a/history-sync/src/main.css
+++ b/history-sync/src/main.css
@@ -51,6 +51,40 @@ app-menu {
   /* Altura total da viewport menos a altura do cabeçalho */
 }
 
+/* Botões */
+.new-event-button,
+.search-events,
+.menu-all-button,
+.save-button,
+.delete-btn {
+  color: var(--klistapp-mine-shaft);
+  background-color: transparent;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.delete-btn,
+.save-button {
+  padding: 0.1875rem;
+  border-color: var(--klistapp-jacksons-purple);
+  border-radius: var(--bs-border-radius);
+}
+
+.new-event-button i,
+.search-events i,
+.menu-all-button i {
+  color: inherit;
+}
+
+.new-event-button:hover,
+.search-events:hover,
+.menu-all-button:hover,
+.save-button:hover,
+.delete-btn:hover {
+  color: var(--klistapp-nero);
+  background-color: var(--klistapp-bay-of-many);
+}
+
+
 /* Para telas com largura mínima de 900px */
 @media screen and (min-width: 900px) {
 
