--- a/history-sync/src/app/footer/footer.component.html
+++ b/history-sync/src/app/footer/footer.component.html
@@ -1,3 +1,34 @@
-<footer>
-  <p>&copy; 2024 Desenvolvido por João Abner Almeida.</p>
+<footer class="bg-light text-center text-lg-start mt-auto">
+  <div class="container p-4">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5>HystorySync</h5>
+        <p>
+          Este é um exemplo de rodapé para o projeto Angular usando Bootstrap.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="text-center p-3 bg-light">
+    © 2025 Desenvolvido por João Abner Almeida.
+  </div>
 </footer>
+
+<!--
+<p>&copy; 2025 Desenvolvido por João Abner Almeida.</p>
+
+<footer class="bg-light text-center text-lg-start mt-auto">
+  <div class="container p-4">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Meu Projeto</h5>
+        <p>
+          Este é um exemplo de rodapé para o projeto Angular usando Bootstrap.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="text-center p-3 bg-light">
+    © 2024 Meu Projeto
+  </div>
+</footer> -->
