--- a/history-sync/src/app/footer/footer.component.css
+++ b/history-sync/src/app/footer/footer.component.css
@@ -1,6 +1,5 @@
 footer {
-  text-align: center;
-  /* padding: 1.25rem; */
+  position: sticky;
   padding: 0.5625rem 0.5rem;
   background-color: var(--klistapp-jacksons-purple);
   margin-top: 43%;
