--- a/history-sync/src/app/menu/menu.component.css
+++ b/history-sync/src/app/menu/menu.component.css
@@ -2,9 +2,12 @@
   font-size: 14px;
   width: 16%;
   /* Ocupa toda a largura de 16% da tela */
-  height: 80vh;
+  height: 100vh;
   /* Altura total da viewport */
-  position: relative;
+
+  position: absolute;
+  top: 10%;
+  left: 0;
   background-color: var(--klistapp-wild-sand);
   z-index: 999;
   transform: translateX(0);
