--- a/history-sync/src/app/footer/footer.component.css
+++ b/history-sync/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
-  position: sticky;
-  padding: 0.5625rem 0.5rem;
+  width: 100%;
   background-color: var(--klistapp-jacksons-purple);
-  margin-top: 43%;
   color: var(--klistapp-nero);
+  padding: 0.5625rem 0.5rem;
+  text-align: center;
 }
