--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -4,11 +4,12 @@
     <!-- Navegação -->
     <nav class="navegacao">
       <ul id="ul-navegacao">
-        <li><button type="button" class="btn new-event-button"><i class="bi bi-plus-square-fill"></i>
+        <li><button type="button" class="btn new-event-button" [routerLink]="['/new-event-page']"><i
+              class="bi bi-plus-square-fill"></i>
             Novo
             Evento</button></li>
         <li>
-          <button type="button" class="btn search-events" id="search-events">
+          <button type="button" class="btn search-events" [routerLink]="['/search-events']" id="search-events">
             <i class="bi bi-search"></i> Buscar Evento
           </button>
         </li>
