--- a/history-sync/src/main.css
+++ b/history-sync/src/main.css
@@ -1,5 +1,25 @@
 @import 'themes/variables.css';
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  flex: 1;
+}
+
 /* Para telas com largura mínima de 900px */
 @media screen and (min-width: 900px) {
 
