Add SearchEventsPage component and update routing; implement search form and styles

--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
             Novo
             Evento</button></li>
         <li>
-          <button type="button" class="btn search-events" [routerLink]="['/search-events']" id="search-events">
+          <button type="button" class="btn search-events" [routerLink]="['/search-events-page']" id="search-events">
             <i class="bi bi-search"></i> Buscar Evento
           </button>
         </li>
