Refactor NewEventPage styles and structure; update SearchEventsPage title styles

--- a/history-sync/src/app/new-event-page/new-event-page.component.html
+++ b/history-sync/src/app/new-event-page/new-event-page.component.html
@@ -1,4 +1,10 @@
 <div class="new-event-container">
   <h2 class="new-event-title">Novo Evento</h2>
   <!-- Formulário ou conteúdo aqui -->
+  <p>Adicione seu Evento Historico aqui</p>
+  <form>
+    <button type="submit" class="btn search-btn">
+      Adicionar
+    </button>
+  </form>
 </div>
