--- a/history-sync/src/app/new-event-page/new-event-page.component.css
+++ b/history-sync/src/app/new-event-page/new-event-page.component.css
@@ -10,5 +10,27 @@
 .new-event-title {
   text-align: center;
   margin-bottom: 1.5rem;
-  color: #333;
+  color: var(--klistapp-mine-shaft);
+}
+
+p {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: var(--klistapp-mine-shaft);
+}
+
+.search-btn {
+  width: 100%;
+  max-width: 350px;
+  font-size: 1rem;
+  padding: 0.5rem;
+  background-color: var(--klistapp-jacksons-purple, #4B3869);
+  color: var(--klistapp-nero);
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
