Enhance WelcomeBindingComponent to support personalized greetings; update routing to handle user name parameter and display customized welcome message.

--- a/history-sync/src/app/welcome-binding/welcome-binding.component.html
+++ b/history-sync/src/app/welcome-binding/welcome-binding.component.html
@@ -3,4 +3,5 @@
   <p>Explore o sistema e pesquise sobre eventos Históricos!</p>
 
   <input [(ngModel)]="userName" (input)="updateWelcomeMessage()" placeholder="Digite seu nome" class="name-input" />
+  <a [routerLink]="['/saudacao', userName]" *ngIf="userName">Ir para saudação personalizada</a>
 </div>
