Refactor menu component: update button labels to English and improve formatting for better readability

--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -4,13 +4,17 @@
     <!-- Navegação -->
     <nav class="navegacao">
       <ul id="ul-navegacao">
-        <li><button type="button" class="btn new-event-button" [routerLink]="['/new-event-page']"><i
-              class="bi bi-plus-square-fill"></i>
-            Novo
-            Evento</button></li>
+        <li>
+          <button type="button" class="btn new-event-button" [routerLink]="['/new-event-page']">
+            <i class="bi bi-plus-square-fill"></i>
+            New
+            Event</button>
+        </li>
         <li>
           <button type="button" class="btn search-events" [routerLink]="['/search-events-page']" id="search-events">
-            <i class="bi bi-search"></i> Buscar Evento
+            <i class="bi bi-search"></i>
+            Search
+            Events
           </button>
         </li>
       </ul>
