--- a/history-sync/src/app/footer/footer.component.html
+++ b/history-sync/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="text-center text-lg-start mt-auto">
   <div class="text-center p-3">
-    © 2025 Desenvolvido por João Abner Pereira de Almeida.
+    © 2025 Developed by João Abner Pereira de Almeida.
   </div>
 </footer>
