--- a/history-sync/src/app/menu/menu.component.html
+++ b/history-sync/src/app/menu/menu.component.html
@@ -10,13 +10,21 @@
             New
             Event</button>
         </li>
+        <!-- <li>
+          <button type="button" class="btn my-events-button" [routerLink]="['/my-events']">
+            <i class="bi bi-list-ul"></i>
+            My Events
+          </button>
+        </li> -->
         <li>
-          <button type="button" class="btn search-events" [routerLink]="['/search-events-page']" id="search-events">
+          <button type="button" class="btn search-events-button" [routerLink]="['/search-events-page']"
+            id="search-events">
             <i class="bi bi-search"></i>
             Search
             Events
           </button>
         </li>
+
       </ul>
     </nav>
   </div>
