--- a/history-sync/src/app/my-events-page/my-events-page.component.html
+++ b/history-sync/src/app/my-events-page/my-events-page.component.html
@@ -2,8 +2,8 @@
   <h2>My Events</h2>
   <div *ngIf="events.length === 0">No events found.</div>
   <div *ngFor="let event of events" class="event-card">
-    <h5 class="card-title">{{ event.title }}</h5>
-    <h6 class="card-subtitle">{{ event.year }}</h6>
+    <h5 class="card-title">{{ event.title | uppercase }}</h5>
+    <h6 class="card-subtitle">{{ event.year}}</h6>
     <p class="card-text">{{ event.description }}</p>
   </div>
 </div>
