Restore background image and styling for body in main.css; adjust font size in app.component.css

--- a/history-sync/src/main.css
+++ b/history-sync/src/main.css
@@ -11,6 +11,10 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: url("https://res.cloudinary.com/daqpjdyeu/image/upload/v1719009366/HistorySync/business-background_d8h7h3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 app-root {
