--- a/history-sync/src/app/app.component.css
+++ b/history-sync/src/app/app.component.css
@@ -21,10 +21,5 @@ main {
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  background-image: url("https://res.cloudinary.com/daqpjdyeu/image/upload/v1719009366/HistorySync/business-background_d8h7h3.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-size: 1rem;
-  /* Tamanho padrão da fonte */
+  font-size: 16px;
 }
