--- a/src/app/my-events-page/my-events-page.component.html
+++ b/src/app/my-events-page/my-events-page.component.html
@@ -1,9 +1,13 @@
 <div class="my-events-container">
   <h2>My Events</h2>
   <div *ngIf="events.length === 0">No events found.</div>
+  <!-- Exemplo de botões para cada evento -->
   <div *ngFor="let event of events" class="event-card">
     <h5 class="card-title">{{ event.title | uppercase }}</h5>
     <h6 class="card-subtitle">Year: {{ event.year}}</h6>
     <p class="card-text">{{ event.description }}</p>
+    <button class="update-button" (click)="updateEvent(event)">Atualizar</button>
+    <button class="patch-button" (click)="patchEvent(event, { title: 'Novo título' })">Atualizar Título</button>
+    <button class="delete-button" (click)="deleteEvent(event)">Deletar</button>
   </div>
 </div>
